--- a/code.ipynb
+++ b/code.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 223,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 265,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -279,6 +279,8 @@
    },
    "outputs": [],
    "source": [
+    "batch = 1\n",
+    "\n",
     "data_list = []\n",
     "\n",
     "for index, f in enumerate(synthetic):\n",
@@ -298,7 +300,7 @@
     "    \n",
     "    ### between centrality\n",
     "    bcs = []\n",
-    "    bc = torch_geometric.io.read_txt_array(between[index], dtype=torch.long)\n",
+    "    bc = torch_geometric.io.read_txt_array(between[index], dtype=torch.double)\n",
     "    bc = bc.t().contiguous()\n",
     "    row, col = bc\n",
     "    bc = col\n",
@@ -306,11 +308,12 @@
     "    for b in bc:\n",
     "        bcs.append([b])\n",
     "\n",
+    "#     bcs = np.array(bcs)\n",
     "    data = Data(x=vertice, edge_index=edge_index, y=bcs)\n",
-    "    \n",
+    "\n",
     "    data_list.append(data)\n",
     "\n",
-    "loader = DataLoader(data_list, batch_size=2)\n",
+    "loader = DataLoader(data_list, batch_size=batch)\n",
     "# print(loader)"
    ]
   },
@@ -325,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 266,
    "metadata": {
     "id": "gcEf-tUaqDVa"
    },
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 267,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -402,14 +405,15 @@
     "            h_s.append(x)\n",
     "        \n",
     "        h_s = torch.stack(h_s)\n",
-    "        z = global_max_pool(h_s, torch.tensor([0], dtype=torch.long))\n",
+    "#         print(h_s.shape)\n",
+    "        z = global_max_pool(h_s, torch.tensor([0], dtype=torch.long).to(device))\n",
     "        \n",
     "        ### Decoder\n",
     "        z = self.w_4(z)\n",
     "        z = F.relu(z)\n",
     "        z = self.w_5(z)\n",
     "        \n",
-    "        return ret\n",
+    "        return z\n",
     "\n",
     "    def message(self, x_j, norm: OptTensor):\n",
     "        return x_j if norm is None else norm.view(-1, 1) * x_j\n",
@@ -427,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 268,
    "metadata": {
     "id": "y5e6PdjwaGiM"
    },
@@ -443,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 270,
    "metadata": {
     "scrolled": true
    },
@@ -475,36 +479,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/15 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "CUDA out of memory. Tried to allocate 80.00 MiB (GPU 1; 22.17 GiB total capacity; 535.20 MiB already allocated; 46.81 MiB free; 630.00 MiB reserved in total by PyTorch)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-118-6ba266f10b32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mbc_pr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mbc_gt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/june/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    725\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    726\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 727\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    728\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    729\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-114-6ea34e240fc4>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_layers\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0;31m# internally calls the message(), aggregate() and update() functions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m             \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpropagate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medge_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m             \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m             \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/june/lib/python3.7/site-packages/torch_geometric/nn/conv/message_passing.py\u001b[0m in \u001b[0;36mpropagate\u001b[0;34m(self, edge_index, size, **kwargs)\u001b[0m\n\u001b[1;32m    235\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    236\u001b[0m             \u001b[0mmsg_kwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minspector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistribute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'message'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoll_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 237\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmsg_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m             \u001b[0;31m# For `GNNExplainer`, we require a separate message and aggregate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-114-6ea34e240fc4>\u001b[0m in \u001b[0;36mmessage\u001b[0;34m(self, x_j, norm)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_j\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mOptTensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mx_j\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mnorm\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx_j\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 80.00 MiB (GPU 1; 22.17 GiB total capacity; 535.20 MiB already allocated; 46.81 MiB free; 630.00 MiB reserved in total by PyTorch)"
+      " 23%|██▎       | 7/30 [00:42<02:21,  6.16s/it]"
      ]
     }
    ],
    "source": [
     "for epoch in range(epochs):\n",
     "    \n",
-    "    bce_loss = 0.0\n",
+    "#     bce_loss = 0.0\n",
     "    graph_cnt = 0\n",
     "    for data in tqdm(loader):\n",
     "        \n",
@@ -513,20 +502,32 @@
     "        data = data.to(device)\n",
     "        bc_pr = model(data)\n",
     "        bc_gt = data.y\n",
+    "        bc_gt = np.array(bc_gt)\n",
     "        \n",
-    "        # row: source, col: det\n",
-    "        row, col = data.edge_index\n",
-    "        y_gt = bc_gt[col] - bc_gt[row]\n",
-    "        y_pr = bc_pr[col] - bc_gt[row]\n",
-    "        loss = criterion(y_pr, y_gt)\n",
+    "        picked = [(torch.rand(25000, 2) * 4999).long()]\n",
+    "        for b in range(batch-1):\n",
+    "            picked.append((torch.rand(25000, 2) * 4999).long())\n",
     "        \n",
-    "        bce_loss += data.num_graphs * loss.item()\n",
+    "        bce_loss = torch.tensor(0, dtype=torch.float).to(device)\n",
+    "        for b in range(batch):\n",
+    "            index = picked[b]\n",
+    "            for i in range(len(index)):\n",
+    "                s1, s2 = index[i]\n",
+    "                \n",
+    "                y_gt = bc_gt[b][s2] - bc_gt[b][s1]\n",
+    "                y_pr = bc_pr[b][s2] - bc_pr[b][s1]\n",
+    "                \n",
+    "                y_gt = torch.from_numpy(y_gt).to(device)\n",
+    "                loss = criterion(y_pr, y_gt)\n",
+    "                bce_loss += loss\n",
+    "                \n",
+    "#         bce_loss += data.num_graphs * loss.item()\n",
     "        graph_cnt += data.num_graphs\n",
     "        \n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "    print(\"Epoch = {}, loss = {}\".format(epoch, bce_loss/graph_cnt))\n",
+    "    print(\"Epoch = {}, loss = {}\".format(epoch, bce_loss.item()/graph_cnt))\n",
     "    \n",
     "    \n",
     "    checkpoint = {\n",
@@ -538,10 +539,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 277,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 5000, 1])"
+      ]
+     },
+     "execution_count": 277,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test fit model\n",
+    "predict = model(data.to(device))\n",
+    "predict.shape\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sampling nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our experiments, we randomly sample 5|V | source nodes and 5|V |\n",
+    "target nodes with replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([25000, 2])"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "picked = (torch.rand(25000, 2) * 4999).long()\n",
+    "for b in range(batch-1):\n",
+    "    picked = torch.stack((picked, (torch.rand(25000, 2) * 4999).long()))\n",
+    "    \n",
+    "picked.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39962], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39960], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39962], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39962], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39960], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39962], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39964], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39962], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39966], x=[5000, 3], y=[1])\n",
+      "Batch(batch=[5000], edge_index=[2, 39968], x=[5000, 3], y=[1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in loader:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataLoader' object has no attribute 'y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-192-f652143d5d1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mloader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mloader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataLoader' object has no attribute 'y'"
+     ]
+    }
+   ],
+   "source": [
+    "(loader[0].y-loader.y[1]).shape"
+   ]
   },
   {
    "cell_type": "code",
