--- a/code.ipynb
+++ b/code.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 285,
    "metadata": {
     "id": "y5e6PdjwaGiM"
    },
@@ -441,13 +441,13 @@
     "p = 128 # embedding dimension of hidden state\n",
     "q = int(p/2)\n",
     "\n",
-    "epochs = 100\n",
+    "epochs = 1000\n",
     "model_save = os.path.join(_root, \"weight.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 287,
    "metadata": {
     "scrolled": true
    },
@@ -486,7 +486,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 23%|██▎       | 7/30 [00:42<02:21,  6.16s/it]"
+      " 13%|█▎        | 4/30 [00:39<04:15,  9.85s/it]"
      ]
     }
    ],
@@ -524,7 +524,7 @@
     "#         bce_loss += data.num_graphs * loss.item()\n",
     "        graph_cnt += data.num_graphs\n",
     "        \n",
-    "        loss.backward()\n",
+    "        bce_loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
     "    print(\"Epoch = {}, loss = {}\".format(epoch, bce_loss.item()/graph_cnt))\n",
