--- a/code.ipynb
+++ b/code.ipynb
@@ -1102,7 +1102,153 @@
       "\n",
       "Epoch: 3\n",
       "Train: loss = 17318.907033099033, top 1 = 0.04, top 5 = 0.084, top 10 = 0.194, kendal = 0.49979275855171035\n",
-      "Valid: loss = 17328.732307741277, top 1 = 0.0, top 5 = 0.0014666666666666671, top 10 = 0.007466666666666667, kendal = -0.4303130759485231\n"
+      "Valid: loss = 17328.732307741277, top 1 = 0.0, top 5 = 0.0014666666666666671, top 10 = 0.007466666666666667, kendal = -0.4303130759485231\n",
+      "\n",
+      "Epoch: 4\n",
+      "Train: loss = 17315.066969743944, top 1 = 0.02, top 5 = 0.072, top 10 = 0.188, kendal = 0.49551190238047615\n",
+      "Valid: loss = 17328.748360859565, top 1 = 0.0, top 5 = 0.0016, top 10 = 0.0076, kendal = -0.4254313422684535\n",
+      "\n",
+      "Epoch: 5\n",
+      "Train: loss = 17311.1902626882, top 1 = 0.0, top 5 = 0.092, top 10 = 0.17, kendal = 0.4855334266853371\n",
+      "Valid: loss = 17328.76585824814, top 1 = 0.0, top 5 = 0.0016, top 10 = 0.0076, kendal = -0.42152580916183247\n",
+      "\n",
+      "Epoch: 6\n",
+      "Train: loss = 17306.998755181186, top 1 = 0.02, top 5 = 0.084, top 10 = 0.178, kendal = 0.48059275855171035\n",
+      "Valid: loss = 17328.78588661704, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.0076, kendal = -0.4182130132693204\n",
+      "\n",
+      "Epoch: 7\n",
+      "Train: loss = 17303.11638887196, top 1 = 0.0, top 5 = 0.06, top 10 = 0.2, kendal = 0.48231534306861373\n",
+      "Valid: loss = 17328.80832789446, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.0076, kendal = -0.41521261585650465\n",
+      "\n",
+      "Epoch: 8\n",
+      "Train: loss = 17298.536644571715, top 1 = 0.02, top 5 = 0.092, top 10 = 0.158, kendal = 0.487542948589718\n",
+      "Valid: loss = 17328.833259510182, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.007866666666666668, kendal = -0.4124734173501367\n",
+      "\n",
+      "Epoch: 9\n",
+      "Train: loss = 17295.042837793855, top 1 = 0.0, top 5 = 0.06, top 10 = 0.166, kendal = 0.47004008801760355\n",
+      "Valid: loss = 17328.85805284696, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008066666666666666, kendal = -0.41028137894245514\n",
+      "\n",
+      "Epoch: 10\n",
+      "Train: loss = 17291.16785872772, top 1 = 0.0, top 5 = 0.068, top 10 = 0.15, kendal = 0.48184628925785156\n",
+      "Valid: loss = 17328.887239696804, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008133333333333333, kendal = -0.4087000333400013\n",
+      "\n",
+      "Epoch: 11\n",
+      "Train: loss = 17286.486019675067, top 1 = 0.0, top 5 = 0.06, top 10 = 0.138, kendal = 0.4675269453890778\n",
+      "Valid: loss = 17328.9165852437, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008333333333333333, kendal = -0.40741155697806236\n",
+      "\n",
+      "Epoch: 12\n",
+      "Train: loss = 17283.26689116274, top 1 = 0.0, top 5 = 0.088, top 10 = 0.158, kendal = 0.46537371474294864\n",
+      "Valid: loss = 17328.95009595297, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008466666666666667, kendal = -0.40627374541574984\n",
+      "\n",
+      "Epoch: 13\n",
+      "Train: loss = 17277.56384648838, top 1 = 0.0, top 5 = 0.068, top 10 = 0.17, kendal = 0.4835627925585117\n",
+      "Valid: loss = 17328.985664166827, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008533333333333334, kendal = -0.405317351470294\n",
+      "\n",
+      "Epoch: 14\n",
+      "Train: loss = 17274.30056735268, top 1 = 0.02, top 5 = 0.056, top 10 = 0.162, kendal = 0.46792750550110024\n",
+      "Valid: loss = 17329.02523364163, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008666666666666666, kendal = -0.40439959991998403\n",
+      "\n",
+      "Epoch: 15\n",
+      "Train: loss = 17268.61766473149, top 1 = 0.0, top 5 = 0.056, top 10 = 0.174, kendal = 0.4768347269453891\n",
+      "Valid: loss = 17329.06584995919, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.0086, kendal = -0.40345259985330395\n",
+      "\n",
+      "Epoch: 16\n",
+      "Train: loss = 17265.529815975246, top 1 = 0.02, top 5 = 0.084, top 10 = 0.164, kendal = 0.48557199439887977\n",
+      "Valid: loss = 17329.111471730565, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008533333333333334, kendal = -0.4025899046475961\n",
+      "\n",
+      "Epoch: 17\n",
+      "Train: loss = 17260.323052754466, top 1 = 0.0, top 5 = 0.072, top 10 = 0.184, kendal = 0.4739747949589918\n",
+      "Valid: loss = 17329.1585713731, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.0086, kendal = -0.40182561845702475\n",
+      "\n",
+      "Epoch: 18\n",
+      "Train: loss = 17255.22368522626, top 1 = 0.0, top 5 = 0.072, top 10 = 0.17, kendal = 0.48407329465893184\n",
+      "Valid: loss = 17329.211784475592, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008666666666666666, kendal = -0.40119829299193177\n",
+      "\n",
+      "Epoch: 19\n",
+      "Train: loss = 17250.24393073753, top 1 = 0.0, top 5 = 0.068, top 10 = 0.188, kendal = 0.47517631526305265\n",
+      "Valid: loss = 17329.26756001854, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.008866666666666667, kendal = -0.40071770087350805\n",
+      "\n",
+      "Epoch: 20\n",
+      "Train: loss = 17246.069052689687, top 1 = 0.0, top 5 = 0.08, top 10 = 0.196, kendal = 0.47859411882376474\n",
+      "Valid: loss = 17329.332371745164, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.009133333333333334, kendal = -0.40046557578182296\n",
+      "\n",
+      "Epoch: 21\n",
+      "Train: loss = 17240.996613815965, top 1 = 0.0, top 5 = 0.096, top 10 = 0.192, kendal = 0.4664193638727746\n",
+      "Valid: loss = 17329.397826425073, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.009133333333333334, kendal = -0.4003508701740348\n",
+      "\n",
+      "Epoch: 22\n",
+      "Train: loss = 17236.877680281585, top 1 = 0.02, top 5 = 0.088, top 10 = 0.2, kendal = 0.48219067813562716\n",
+      "Valid: loss = 17329.471948292234, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.009000000000000003, kendal = -0.4002932586517304\n",
+      "\n",
+      "Epoch: 23\n",
+      "Train: loss = 17234.208485166288, top 1 = 0.0, top 5 = 0.08, top 10 = 0.158, kendal = 0.47493354670934185\n",
+      "Valid: loss = 17329.5449906548, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.00926666666666667, kendal = -0.40025064746282574\n",
+      "\n",
+      "Epoch: 24\n",
+      "Train: loss = 17228.812949266285, top 1 = 0.0, top 5 = 0.084, top 10 = 0.154, kendal = 0.4725978795759152\n",
+      "Valid: loss = 17329.621516914765, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.009200000000000003, kendal = -0.40023288391011536\n",
+      "\n",
+      "Epoch: 25\n",
+      "Train: loss = 17223.51450158967, top 1 = 0.02, top 5 = 0.064, top 10 = 0.178, kendal = 0.4774100420084017\n",
+      "Valid: loss = 17329.706750477075, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.009333333333333336, kendal = -0.3999225125025005\n",
+      "\n",
+      "Epoch: 26\n",
+      "Train: loss = 17218.696469780192, top 1 = 0.0, top 5 = 0.068, top 10 = 0.188, kendal = 0.4749084216843369\n",
+      "Valid: loss = 17329.792681771072, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.009533333333333336, kendal = -0.39933347736213914\n",
+      "\n",
+      "Epoch: 27\n",
+      "Train: loss = 17216.083013984146, top 1 = 0.0, top 5 = 0.076, top 10 = 0.182, kendal = 0.47271726345269055\n",
+      "Valid: loss = 17329.878936931058, top 1 = 0.0, top 5 = 0.0017333333333333335, top 10 = 0.009733333333333337, kendal = -0.3986487110755484\n",
+      "\n",
+      "Epoch: 28\n",
+      "Train: loss = 17211.349506675546, top 1 = 0.04, top 5 = 0.084, top 10 = 0.182, kendal = 0.4657128225645129\n",
+      "Valid: loss = 17329.969692428873, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.010000000000000004, kendal = -0.3980233219977329\n",
+      "\n",
+      "Epoch: 29\n",
+      "Train: loss = 17206.938651210534, top 1 = 0.0, top 5 = 0.084, top 10 = 0.15, kendal = 0.4632324864972995\n",
+      "Valid: loss = 17330.066377468454, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.010133333333333336, kendal = -0.3974485190371408\n",
+      "\n",
+      "Epoch: 30\n",
+      "Train: loss = 17198.07384367979, top 1 = 0.02, top 5 = 0.064, top 10 = 0.162, kendal = 0.4804866573314663\n",
+      "Valid: loss = 17330.167695763037, top 1 = 0.0, top 5 = 0.0018666666666666669, top 10 = 0.010200000000000004, kendal = -0.39693334933653396\n",
+      "\n",
+      "Epoch: 31\n",
+      "Train: loss = 17194.289797679652, top 1 = 0.02, top 5 = 0.08, top 10 = 0.154, kendal = 0.47245961192238445\n",
+      "Valid: loss = 17330.26775691455, top 1 = 0.0, top 5 = 0.0020000000000000005, top 10 = 0.01026666666666667, kendal = -0.39645700873508033\n",
+      "\n",
+      "Epoch: 32\n",
+      "Train: loss = 17190.78819098102, top 1 = 0.0, top 5 = 0.08, top 10 = 0.182, kendal = 0.48045705141028205\n",
+      "Valid: loss = 17330.386127386642, top 1 = 0.0, top 5 = 0.002133333333333334, top 10 = 0.010733333333333336, kendal = -0.39597337600853505\n",
+      "\n",
+      "Epoch: 33\n",
+      "Train: loss = 17187.12363547006, top 1 = 0.0, top 5 = 0.076, top 10 = 0.168, kendal = 0.47256235247049416\n",
+      "Valid: loss = 17330.50229868078, top 1 = 0.0, top 5 = 0.002266666666666667, top 10 = 0.010800000000000002, kendal = -0.39545647796225913\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch: 34\n",
+      "Train: loss = 17181.5350156542, top 1 = 0.0, top 5 = 0.072, top 10 = 0.16, kendal = 0.4749263452690538\n",
+      "Valid: loss = 17330.62815328429, top 1 = 0.0, top 5 = 0.002266666666666667, top 10 = 0.010800000000000002, kendal = -0.39488022404480905\n",
+      "\n",
+      "Epoch: 35\n",
+      "Train: loss = 17176.90507212505, top 1 = 0.0, top 5 = 0.084, top 10 = 0.166, kendal = 0.4623871974394879\n",
+      "Valid: loss = 17330.755951817337, top 1 = 0.0, top 5 = 0.0024000000000000002, top 10 = 0.010800000000000002, kendal = -0.39425262652530507\n",
+      "\n",
+      "Epoch: 36\n",
+      "Train: loss = 17169.890900443505, top 1 = 0.0, top 5 = 0.076, top 10 = 0.176, kendal = 0.4620352870574115\n",
+      "Valid: loss = 17330.89672235722, top 1 = 0.0, top 5 = 0.0024000000000000002, top 10 = 0.010800000000000002, kendal = -0.39360567580182704\n",
+      "\n",
+      "Epoch: 37\n",
+      "Train: loss = 17163.064100209092, top 1 = 0.0, top 5 = 0.068, top 10 = 0.172, kendal = 0.47074342868573715\n",
+      "Valid: loss = 17331.050697548337, top 1 = 0.0, top 5 = 0.0024000000000000002, top 10 = 0.010866666666666667, kendal = -0.39296658264986334\n",
+      "\n",
+      "Epoch: 38\n",
+      "Train: loss = 17157.133943159577, top 1 = 0.02, top 5 = 0.08, top 10 = 0.166, kendal = 0.46993062612522507\n",
+      "Valid: loss = 17331.198610410986, top 1 = 0.0, top 5 = 0.0024000000000000002, top 10 = 0.010866666666666667, kendal = -0.39234373274654927\n"
      ]
     }
    ],
@@ -1159,8 +1305,8 @@
     "    bc_gt = torch.reshape(bc_gt, (-1, ))\n",
     "\n",
     "    # random sample 5|V| nodes\n",
-    "    src = (torch.rand(25000) * 4999).long()\n",
-    "    det = (torch.rand(25000) * 4999).long()\n",
+    "    src = (torch.rand(nodes_cnt * 5) * (nodes_cnt-1)).long()\n",
+    "    det = (torch.rand(nodes_cnt * 5) * (nodes_cnt-1)).long()\n",
     "\n",
     "    y_gt = (bc_gt[det] - bc_gt[src]).squeeze().to(setting.device)\n",
     "    y_pr = (bc_pr[det] - bc_pr[src]).squeeze()\n",
