Add baselines functions

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "measured-stroke",
+   "id": "therapeutic-latin",
    "metadata": {},
    "source": [
     "# Libs"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "independent-group",
+   "id": "shaped-quest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "increasing-search",
+   "id": "cheap-tribe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "traditional-disabled",
+   "id": "blond-budapest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alike-frequency",
+   "id": "complimentary-entry",
    "metadata": {},
    "source": [
     "# Setting"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moral-emission",
+   "id": "steady-marking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civic-latino",
+   "id": "fixed-lease",
    "metadata": {},
    "source": [
     "#### Usage"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binary-latest",
+   "id": "capable-sport",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "treated-extent",
+   "id": "civil-ranch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agricultural-shock",
+   "id": "demonstrated-middle",
    "metadata": {},
    "source": [
     "# Data functions"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sorted-horizontal",
+   "id": "educational-fraud",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "necessary-bonus",
+   "id": "electoral-study",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demanding-group",
+   "id": "naughty-census",
    "metadata": {},
    "source": [
     "### Cvt 2 Pyg.Data"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blessed-prime",
+   "id": "whole-samoa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,11 +268,11 @@
     "\n",
     "    if y is not None:\n",
     "        ### between centrality\n",
-    "        bc = np.loadtxt(y, delimiter=y_sep, usecols=usecols)\n",
-    "        bc = np.reshape(bc, (-1, 1))\n",
-    "        bc = torch.from_numpy(bc)\n",
+    "        score = np.loadtxt(y, delimiter=y_sep, usecols=usecols)\n",
+    "        score = np.reshape(score, (-1, 1))\n",
+    "        score = torch.from_numpy(score)\n",
     "\n",
-    "        data = Data(x=vertice, edge_index=edge_index, y=bc)\n",
+    "        data = Data(x=vertice, edge_index=edge_index, y=score)\n",
     "        \n",
     "    else:\n",
     "        data = Data(x=vertice, edge_index=edge_index)\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-gentleman",
+   "id": "affecting-baseline",
    "metadata": {},
    "source": [
     "### Cvt 2 Pyg.Dataloader"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-albania",
+   "id": "accessory-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controversial-victorian",
+   "id": "premier-devil",
    "metadata": {},
    "source": [
     "### From networkx"
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aboriginal-increase",
+   "id": "instant-contemporary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "previous-garbage",
+   "id": "protecting-hopkins",
    "metadata": {},
    "source": [
     "### Random generate data"
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designing-mayor",
+   "id": "hundred-appendix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cordless-count",
+   "id": "falling-flashing",
    "metadata": {},
    "source": [
     "#### Usage\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "leading-neighbor",
+   "id": "unlike-marking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "known-slovakia",
+   "id": "isolated-administration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extreme-terrace",
+   "id": "favorite-plasma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medium-florist",
+   "id": "phantom-butler",
    "metadata": {},
    "source": [
     "## Usage"
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vital-organizer",
+   "id": "north-singing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minor-ordering",
+   "id": "after-fortune",
    "metadata": {},
    "source": [
     "# Model"
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "critical-pakistan",
+   "id": "defined-oracle",
    "metadata": {},
    "source": [
     "## Evaluation"
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "becoming-tonight",
+   "id": "convenient-shepherd",
    "metadata": {},
    "source": [
     "### Top N %"
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "duplicate-supply",
+   "id": "reliable-thunder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-demand",
+   "id": "parliamentary-continuity",
    "metadata": {},
    "source": [
     "### Kendal Tau Distance"
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enabling-consent",
+   "id": "hollow-episode",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-bench",
+   "id": "fifty-ambassador",
    "metadata": {},
    "source": [
     "### Load Model"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imported-riverside",
+   "id": "treated-alexandria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "related-final",
+   "id": "native-ceremony",
    "metadata": {},
    "source": [
     "#### Usage"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twenty-soundtrack",
+   "id": "treated-upset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "natural-average",
+   "id": "fundamental-administrator",
    "metadata": {},
    "source": [
     "### Evaluation"
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "three-knowing",
+   "id": "mineral-faith",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,12 +712,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "lovely-cleaning",
+   "metadata": {},
+   "source": [
+    "# Baselines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "described-russia",
+   "metadata": {},
+   "source": [
+    "## RK(DIAM)\n",
+    "\n",
+    "ApproxBetweenness\n",
+    "\n",
+    "Fast approximation of betweenness centrality through sampling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sharp-ghost",
+   "id": "toxic-median",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def run_rk(save_path, edge_lists, scores):\n",
+    "\n",
+    "    with open(save_path, \"w\") as f:\n",
+    "        jsn = {\n",
+    "            \"top1\": [],\n",
+    "            \"top5\": [],\n",
+    "            \"top10\": [],\n",
+    "            \"kendal\": [],\n",
+    "            \"time\": []\n",
+    "        }\n",
+    "        for edge_list, score in zip(edge_lists, scores):\n",
+    "            G_nx = nx.readwrite.edgelist.read_edgelist(edge_list, delimiter=\"\\t\")\n",
+    "            G_nk = nk.nxadapter.nx2nk(G_nx)\n",
+    "\n",
+    "            method = nk.centrality.ApproxBetweenness(G_nk, epsilon=0.1)\n",
+    "            start = time.time()\n",
+    "            method.run()\n",
+    "            end = time.time()\n",
+    "            \n",
+    "            gt = np.loadtxt(score, usecols=1)\n",
+    "                \n",
+    "            jsn[\"time\"].append(end-start)\n",
+    "            jsn[\"kendal\"].append(kendal_tau_distance(np.array(method.scores()), gt))\n",
+    "            jsn[\"top1\"].append(top_n_percentage(np.array(method.scores()), gt, k=1))\n",
+    "            jsn[\"top5\"].append(top_n_percentage(np.array(method.scores()), gt, k=5))\n",
+    "            jsn[\"top10\"].append(top_n_percentage(np.array(method.scores()), gt, k=10))\n",
+    "\n",
+    "        json.dump(jsn, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "narrative-orleans",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_rk(os.path.join(setting.root, \"rk.json\"), edge_lists=xxx, scores=xxx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "talented-impossible",
+   "metadata": {},
+   "source": [
+    "## KADABRA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "detected-parts",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_kadabra(save_path, edge_lists, scores):\n",
+    "\n",
+    "    with open(save_path, \"w\") as f:\n",
+    "        jsn = {\n",
+    "            \"top1\": [],\n",
+    "            \"top5\": [],\n",
+    "            \"top10\": [],\n",
+    "            \"kendal\": [],\n",
+    "            \"time\": []\n",
+    "        }\n",
+    "        for edge_list, score in zip(edge_lists, scores):\n",
+    "            G_nx = nx.readwrite.edgelist.read_edgelist(edge_list, delimiter=\"\\t\")\n",
+    "            G_nk = nk.nxadapter.nx2nk(G_nx)\n",
+    "            \n",
+    "            method = nk.centrality.KadabraBetweenness(G_nk, 0.05, 0.8)\n",
+    "            start = time.time()\n",
+    "            method.run()\n",
+    "            end = time.time()\n",
+    "\n",
+    "            gt = np.loadtxt(score, usecols=1)\n",
+    "            \n",
+    "            jsn[\"time\"].append(end-start)\n",
+    "            jsn[\"kendal\"].append(kendal_tau_distance(np.array(method.scores()), gt))\n",
+    "            jsn[\"top1\"].append(top_n_percentage(np.array(method.scores()), gt, k=1))\n",
+    "            jsn[\"top5\"].append(top_n_percentage(np.array(method.scores()), gt, k=5))\n",
+    "            jsn[\"top10\"].append(top_n_percentage(np.array(method.scores()), gt, k=10))\n",
+    "\n",
+    "        json.dump(jsn, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fewer-consultation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_rk(os.path.join(setting.root, \"kadabra.json\"), edge_lists=xxx, scores=xxx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cultural-heritage",
+   "metadata": {},
+   "source": [
+    "## KBC\n",
+    "\n",
+    "clone https://github.com/ecrc/BeBeCA and run kbc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "native-partnership",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_kbc(save_path, edge_lists, scores):\n",
+    "    \n",
+    "    import subprocess\n",
+    "    with open(save_path, \"w\") as f:\n",
+    "        jsn = {\n",
+    "            \"top1\": [],\n",
+    "            \"top5\": [],\n",
+    "            \"top10\": [],\n",
+    "            \"kendal\": [],\n",
+    "            \"time\": []\n",
+    "        }\n",
+    "        for edge_list, score in zip(edge_lists, scores):\n",
+    "\n",
+    "            base = os.path.splitext(os.path.basename(edge_list))[0]\n",
+    "\n",
+    "            G_nx = nx.readwrite.edgelist.read_edgelist(edge_list, delimiter=\"\\t\")\n",
+    "            \n",
+    "            # Cvt 2 pyg.Data to get nodes_cnt and edges_cnt\n",
+    "            G_pyg = from_networkx(G_nx)\n",
+    "\n",
+    "            arr = np.array([G_pyg.x.shape[0], G_pyg.edge_index.shape[1]]).reshape((1, 2))\n",
+    "            arr = np.concatenate([arr, G_pyg.edge_index.t().numpy()])\n",
+    "\n",
+    "            save = os.path.join(\"BeBeCA/Source_Code/5000\", \"{}.txt\".format(base))\n",
+    "            save_pr = os.path.join(\"BeBeCA/Source_Code/5000\", \"{}_pr.txt\".format(base))\n",
+    "\n",
+    "            np.savetxt(save, arr, fmt=\"%d\")\n",
+    "\n",
+    "            start = time.time()\n",
+    "            subprocess.run([\"./BeBeCA/Source_Code/KPATH\", \"2\", save, save_pr])\n",
+    "            end = time.time()\n",
+    "\n",
+    "            pr = np.loadtxt(save_pr, delimiter=\":\", usecols=1)\n",
+    "            gt = np.loadtxt(score, usecols=1)\n",
+    "\n",
+    "            jsn[\"time\"].append(end-start)\n",
+    "            jsn[\"kendal\"].append(kendal_tau_distance(gt, pr))\n",
+    "            jsn[\"top1\"].append(top_n_percentage(gt, pr, k=1))\n",
+    "            jsn[\"top5\"].append(top_n_percentage(gt, pr, k=5))\n",
+    "            jsn[\"top10\"].append(top_n_percentage(gt, pr, k=10))\n",
+    "\n",
+    "        json.dump(jsn, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "british-generic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_rk(os.path.join(setting.root, \"kbc.json\"), edge_lists=xxx, scores=xxx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sublime-minutes",
+   "metadata": {},
+   "source": [
+    "## DrBC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ethical-bottle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_drbc(model, save_path, edge_lists, scores):\n",
+    "    with open(os.path.join(setting.root, \"drbc.json\"), \"w\") as f:\n",
+    "\n",
+    "        data_loader = to_dataloader(edge_lists, scores)\n",
+    "\n",
+    "        top1_list, top5_list, top10_list, kendal_list, time_list, loss_list = eval_model(model, data_loader, \"cpu\")\n",
+    "        \n",
+    "        jsn = {\n",
+    "            \"top1\": top1_list,\n",
+    "            \"top5\": top5_list,\n",
+    "            \"top10\": top10_list,\n",
+    "            \"kendal\": kendal_list,\n",
+    "            \"time\": time_list\n",
+    "        }\n",
+    "\n",
+    "        json.dump(jsn, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "worthy-syndication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_rk(os.path.join(setting.root, \"drbc.json\"), edge_lists=xxx, scores=xxx)"
+   ]
   }
  ],
  "metadata": {
